# TDCrash

./: README.md  gradle.properties  settings.gradle
bridgeLib/: build.gradle
bridgeLib/src/main/: AndroidManifest.xml
demo/: build.gradle
demo/src/main/: AndroidManifest.xml
demo/src/main/java/com/bugliee/tacrashdemo/: MApplication.java  MainActivity.java
demo/src/main/java/com/bugliee/tdcrashdemo/: MApplication.java  MainActivity.java
demo/src/main/res/values/: strings.xml
demo/src/test/java/com/bugliee/tdcrashdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
taCrashLib/: build.gradle
taCrashLib/src/main/: AndroidManifest.xml
taCrashLib/src/main/cpp/: CMakeLists.txt  tacrash.exports
taCrashLib/src/main/cpp/common/: tacc_b64.c  tacc_b64.h  tacc_fmt.c  tacc_fmt.h  tacc_libc_support.c  tacc_libc_support.h  tacc_signal.c  tacc_signal.h  tacc_spot.h  tacc_unwind.c  tacc_unwind.h  tacc_unwind_clang.c  tacc_unwind_clang.h  tacc_unwind_libcorkscrew.c  tacc_unwind_libcorkscrew.h  tacc_unwind_libunwind.c  tacc_unwind_libunwind.h  tacc_util.c  tacc_util.h  tacc_version.h
taCrashLib/src/main/cpp/dl/: tac_dl.c  tac_dl.h
taCrashLib/src/main/cpp/tacrash/: tac_common.c  tac_common.h  tac_crash.c  tac_crash.h  tac_errno.h  tac_fallback.c  tac_fallback.h  tac_jni.c  tac_jni.h  tac_test.c  tac_test.h  tac_trace.c  tac_trace.h  tac_util.c  tac_util.h
taCrashLib/src/main/cpp/tacrash_dumper/: tacd_arm_exidx.c  tacd_arm_exidx.h  tacd_core.c  tacd_dwarf.c  tacd_dwarf.h  tacd_elf.c  tacd_elf.h  tacd_elf_interface.c  tacd_elf_interface.h  tacd_frames.c  tacd_frames.h  tacd_log.h  tacd_map.c  tacd_map.h  tacd_maps.c  tacd_maps.h  tacd_md5.c  tacd_md5.h  tacd_memory.c  tacd_memory.h  tacd_memory_buf.c  tacd_memory_buf.h  tacd_memory_file.c  tacd_memory_file.h  tacd_memory_remote.c  tacd_memory_remote.h  tacd_process.c  tacd_process.h  tacd_regs.h  tacd_regs_arm.c  tacd_regs_arm64.c  tacd_regs_x86.c  tacd_regs_x86_64.c  tacd_sys.c  tacd_sys.h  tacd_thread.c  tacd_thread.h  tacd_util.c  tacd_util.h
taCrashLib/src/main/java/cn/thinkingdata/android/crash/: AnrHandler.java  CrashType.java  ITACrashCallback.java  ITALibLoader.java  JavaCrashHandler.java  NativeHandler.java  TAConstants.java  TACrash.java  TACrashLogger.java  Utils.java
tdcrashLib/: build.gradle
tdcrashLib/src/main/: AndroidManifest.xml
tdcrashLib/src/main/cpp/: CMakeLists.txt  tdcrash.exports
tdcrashLib/src/main/cpp/common/: tdcc_b64.c  tdcc_b64.h  tdcc_fmt.c  tdcc_fmt.h  tdcc_libc_support.c  tdcc_libc_support.h  tdcc_meminfo.c  tdcc_meminfo.h  tdcc_signal.c  tdcc_signal.h  tdcc_spot.h  tdcc_unwind.c  tdcc_unwind.h  tdcc_unwind_clang.c  tdcc_unwind_clang.h  tdcc_unwind_libcorkscrew.c  tdcc_unwind_libcorkscrew.h  tdcc_unwind_libunwind.c  tdcc_unwind_libunwind.h  tdcc_util.c  tdcc_util.h  tdcc_version.h
tdcrashLib/src/main/cpp/dl/: tdc_dl.c  tdc_dl.h
tdcrashLib/src/main/cpp/tdcrash/: tdc_common.c  tdc_common.h  tdc_crash.c  tdc_crash.h  tdc_errno.h  tdc_fallback.c  tdc_fallback.h  tdc_jni.c  tdc_jni.h  tdc_test.c  tdc_test.h  tdc_trace.c  tdc_trace.h  tdc_util.c  tdc_util.h
tdcrashLib/src/main/cpp/tdcrash_dumper/: tdcd_arm_exidx.c  tdcd_arm_exidx.h  tdcd_core.c  tdcd_dwarf.c  tdcd_dwarf.h  tdcd_elf.c  tdcd_elf.h  tdcd_elf_interface.c  tdcd_elf_interface.h  tdcd_frames.c  tdcd_frames.h  tdcd_log.h  tdcd_map.c  tdcd_map.h  tdcd_maps.c  tdcd_maps.h  tdcd_md5.c  tdcd_md5.h  tdcd_memory.c  tdcd_memory.h  tdcd_memory_buf.c  tdcd_memory_buf.h  tdcd_memory_file.c  tdcd_memory_file.h  tdcd_memory_remote.c  tdcd_memory_remote.h  tdcd_process.c  tdcd_process.h  tdcd_regs.h  tdcd_regs_arm.c  tdcd_regs_arm64.c  tdcd_regs_x86.c  tdcd_regs_x86_64.c  tdcd_sys.c  tdcd_sys.h  tdcd_thread.c  tdcd_thread.h  tdcd_util.c  tdcd_util.h
tdcrashLib/src/main/java/com/thinkingdata/tdcrash/: ActivityMonitor.java  AnrHandler.java  CrashType.java  ITDCrashCallback.java  ITDLibLoader.java  JavaCrashHandler.java  NativeHandler.java  TDConstants.java  TDCrash.java  TDCrashLogger.java  Utils.java
